# IDE-Bench

./: .gitignore  IDE-Arena-Prompt copy.txt  README.md
datasets/custom/: Dockerfile  README.md  docker-compose.yaml  requirements.txt  run_tests.sh
datasets/custom/project/: CMakeLists.txt
datasets/custom/project/include/core/: time_manager.h
datasets/custom/project/include/ecs/: component.h
datasets/custom/project/include/physics/: collision.h  collision_world.h
datasets/custom/project/include/rendering/: animation.h  sprite.h
datasets/custom/project/src/core/: time_manager.cpp
datasets/custom/project/src/ecs/: component.cpp
datasets/custom/project/src/physics/: collision.cpp  collision_world.cpp
datasets/custom/project/src/rendering/: animation.cpp
datasets/custom/tasks/directory-check-task/: docker-compose.yaml  run-tests.sh  task_description.txt  (+2 more)
datasets/custom/tasks/directory-check-task/repo/tmp.benchmarks/polyglot-benchmark/cpp/exercises/practice/cpp001/: CMakeLists.txt  cpp001.cpp
datasets/custom/tasks/directory-check-task/repo/tmp.benchmarks/polyglot-benchmark/cpp/exercises/practice/cpp001/.docs/: instructions.md  introduction.md
datasets/custom/tasks/directory-check-task/repo/tmp.benchmarks/polyglot-benchmark/cpp/exercises/practice/cpp001/.meta/: config.json  example.cpp
datasets/custom/tasks/directory-check-task/repo/tmp.benchmarks/polyglot-benchmark/cpp/exercises/practice/cpp001/test-file-logs/: cpp001_test.cpp  negative_test1.cpp  negative_test1_output.txt  negative_test2.cpp  negative_test2_output.txt  negative_test3_output.txt
(+112 files in other folders)
